unpackaged/main/default/objects/ERS_Payment_Business_Unit__mdt/ERS_Payment_Business_Unit__mdt.object-meta.xml
<CustomObject>
    <label>ERS Payment Business Unit</label>
    <pluralLabel>Business Units</pluralLabel>
</CustomObject>