unpackaged/main/default/objects/ERS_Payment_Business_Unit__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>909660</fullName>
                <default>true</default>
                <label>909660</label>
            </value>
            <value>
                <fullName>928245</fullName>
            </value>
            <value>
                <fullName>916150</fullName>
            </value>
            <value>
                <fullName>338003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>