unpackaged/main/default/objects/ERS_Payment_Business_Unit__mdt/fields/Comm_Center__c.field-meta.xml
<CustomField>
    <fullName>Comm_Center__c</fullName>
    <label>Comm Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PR</fullName>
                <default>true</default>
                <label>PR</label>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>